--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -p .",
     "test": "jest"
   },
   "repository": {
@@ -16,9 +17,21 @@
     "url": "https://github.com/maxdeviant/figurine/issues"
   },
   "homepage": "https://github.com/maxdeviant/figurine#readme",
+  "dependencies": {
+    "immer": "^1.2.0"
+  },
   "devDependencies": {
+    "@types/jest": "^22.2.2",
     "jest": "^22.4.3",
     "prettier": "^1.11.1",
+    "ts-jest": "^22.4.2",
     "typescript": "^2.7.2"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
   }
 }
