--- a/package.json
+++ b/package.json
@@ -27,23 +27,13 @@
     "ts-jest": "^22.4.2",
     "typescript": "^2.7.2"
   },
-  "files": [
-    "lib/",
-    "!lib/__tests__/"
-  ],
+  "files": ["lib/"],
   "jest": {
     "rootDir": "src",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
+    "moduleFileExtensions": ["ts", "tsx", "js", "jsx", "json", "node"]
   }
 }
