--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "typescript": "^2.7.2"
   },
   "files": [
-    "lib/"
+    "lib/",
+    "index.d.ts"
   ],
   "jest": {
     "rootDir": "src",
