--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,9 @@
     "outDir": "lib",
     "rootDir": "src",
     "declaration": true
-  }
+  },
+  "exclude": [
+    "lib/",
+    "index.d.ts"
+  ]
 }
