Fix Jest root directory

--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "index.d.ts"
   ],
   "jest": {
-    "rootDir": "src",
+    "roots": [
+      "<rootDir>/src"
+    ],
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
