--- a/package.json
+++ b/package.json
@@ -18,12 +18,10 @@
   },
   "homepage": "https://github.com/maxdeviant/figurine#readme",
   "dependencies": {
-    "immer": "^1.2.0",
-    "lodash.clonedeep": "^4.5.0"
+    "immer": "^1.2.0"
   },
   "devDependencies": {
     "@types/jest": "^22.2.2",
-    "@types/lodash.clonedeep": "^4.5.3",
     "jest": "^22.4.3",
     "prettier": "^1.11.1",
     "ts-jest": "^22.4.2",
